src/test/resources/invalid_tests/MissingIO.cnna
architecture MissingIO(inputs=10, inputs2=10, classes=2, classes2=2){
    def input Q(-oo:+oo)^{C:inputs} in
    def input Q(-oo:+oo)^{C:inputs2} in2
    def output Q(0:1)^{C:classes} out
    def output Q(0:1)^{C:classes2} out2

    in ->
    FullyConnected(units=64, no_bias=true) ->
    Tanh() ->
    FullyConnected(units=classes, no_bias=true) ->
    Softmax() ->
    out
}